--- a/Perceptron/Perceptron.ipynb
+++ b/Perceptron/Perceptron.ipynb
@@ -6,7 +6,6 @@
       "name": "Perceptron.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfHmjMR4osix/mAl+QJMs7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,27 +21,37 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/valmirf/redes_neurais_ple/blob/master/Perceptron/Perceptron.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valmirf/redes_neurais_esp/blob/main/Perceptron/Perceptron.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2Yyyz9kf3US8",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "f87be1aa-6ba7-4bca-8334-60e6e504fa32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "!git clone https://github.com/valmirf/redes_neurais_ple.git"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: destination path 'redes_neurais_ple' already exists and is not an empty directory.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QV4FHtiCf-HP",
-        "colab_type": "text"
+        "id": "QV4FHtiCf-HP"
       },
       "source": [
         "# **Código da Rede Neural Perceptron**\n",
@@ -76,9 +85,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3EHLTqwin5It",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3EHLTqwin5It"
       },
       "source": [
         "import numpy as np\n",
@@ -116,8 +123,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tCCCgVXChwpm",
-        "colab_type": "text"
+        "id": "tCCCgVXChwpm"
       },
       "source": [
         "#Exemplo dado em Sala de Aula:\n",
@@ -130,8 +136,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "O9zGKKaqf6I5",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "2495278b-21fa-46e0-cba6-c6395b546a95",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
         "training_inputs = []\n",
@@ -153,16 +162,26 @@
         "inputs = np.array([0, 1])\n",
         "p = perceptron.predict(inputs) \n",
         "print(p)\n",
-        "#=> 0"
+        "#=> 0\n",
+        "\n",
+        "weights_and_1 = perceptron.weights"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SsGJ-wqziDp2",
-        "colab_type": "text"
+        "id": "SsGJ-wqziDp2"
       },
       "source": [
         "\n",
@@ -180,8 +199,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "b_Tj6MWWkL73",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "87bc82c7-fa80-47e5-94aa-8ae016a7f8f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
         "training_inputs = []\n",
@@ -192,7 +214,7 @@
         "\n",
         "labels = np.array([1, 0, 0, 0])\n",
         "\n",
-        "perceptron = Perceptron(2)\n",
+        "perceptron = Perceptron(2, nIterations=1)\n",
         "perceptron.train(training_inputs, labels)\n",
         "\n",
         "inputs = np.array([1, 1])\n",
@@ -203,16 +225,26 @@
         "inputs = np.array([0, 1])\n",
         "p = perceptron.predict(inputs) \n",
         "print(p)\n",
-        "#=> 0"
+        "#=> 0\n",
+        "\n",
+        "weights_and_2 = perceptron.weights"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NhoPmRkRkVH2",
-        "colab_type": "text"
+        "id": "NhoPmRkRkVH2"
       },
       "source": [
         "2. Altere o código abaixo para o operador XOR. Deixe os parâmetros no padrão. Qual o resultado para [1,1] e [0,1]? \n",
@@ -224,8 +256,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "xaCPZN-NmH5z",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "21441db0-b0c3-4056-a1c3-c9958090b82e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        }
       },
       "source": [
         "training_inputs = []\n",
@@ -234,7 +269,7 @@
         "training_inputs.append(np.array([0, 1]))\n",
         "training_inputs.append(np.array([0, 0]))\n",
         "\n",
-        "labels = np.array([1, 0, 0, 0])\n",
+        "labels = np.array([0, 1, 1, 0])\n",
         "\n",
         "perceptron = Perceptron(2)\n",
         "perceptron.train(training_inputs, labels)\n",
@@ -247,16 +282,38 @@
         "inputs = np.array([0, 1])\n",
         "p = perceptron.predict(inputs) \n",
         "print(p)\n",
-        "#=> 0"
+        "#=> 0\n",
+        "\n",
+        "weights_xor = perceptron.weights\n",
+        "\n",
+        "print(\"\\n3. Porque o resultado deu errado na questão anterior?\")\n",
+        "print(\"O número de iterações não foi o suficiente para o Perceptron encontrar os pesos ótimos.\")\n",
+        "print(\"Pesos do primeiro AND Perceptron:\",weights_and_1)\n",
+        "print(\"Pesos do segundo AND Perceptron:\", weights_and_2)\n",
+        "print(\"Pesos do XOR Perceptron:\", weights_xor)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "0\n",
+            "\n",
+            "3. Porque o resultado deu errado na questão anterior?\n",
+            "O número de iterações não foi o suficiente para o Perceptron encontrar os pesos ótimos.\n",
+            "Pesos do primeiro AND Perceptron: [0.11 0.11]\n",
+            "Pesos do segundo AND Perceptron: [0.01 0.01]\n",
+            "Pesos do XOR Perceptron: [0.11 0.11]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7KZ19-RLkW4w",
-        "colab_type": "text"
+        "id": "7KZ19-RLkW4w"
       },
       "source": [
         "4. Atualize a função de ativação do perceptron para a função sigmóide. \n",
@@ -267,16 +324,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3M4NMoDikbA5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3M4NMoDikbA5"
       },
       "source": [
         "import numpy as np\n",
         "\n",
         "class Perceptron_to_Adaline(object):\n",
         "\n",
-        "    def __init__(self, no_of_inputs, threshold=0.2, nIterations=100, learning_rate=0.01):\n",
+        "    def __init__(self, no_of_inputs, threshold=0.5, nIterations=100, learning_rate=0.01):\n",
         "        self.nIterations = nIterations\n",
         "        self.threshold = threshold\n",
         "        self.learning_rate = learning_rate\n",
@@ -285,7 +340,8 @@
         "    def predict(self, inputs):\n",
         "        #.dot = produto de dois arrays (somatório entre entrada e peso)\n",
         "        summation = np.dot(inputs, self.weights)\n",
-        "        print(summation)\n",
+        "        #print(\"summation:\", summation)\n",
+        "        summation = 1/(1 + np.exp(-summation))\n",
         "        if summation >= self.threshold:\n",
         "          activation = 1\n",
         "        else:\n",
@@ -307,8 +363,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "H0fiUIJIkYcQ",
-        "colab_type": "text"
+        "id": "H0fiUIJIkYcQ"
       },
       "source": [
         "5. Agora, altere o código para que execute a base de dados Diabetes como Entrada. Avalie os hiperparâmetros abaixo nas redes Perceptron e Adaline, e diga a taxa de acerto no conjunto de testes pra cada configuração.\n",
@@ -322,14 +377,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pq9HZFUYkc5D",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "81937b91-2897-49ed-9764-bd8fc8ae089e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
         "# Neste código vou utilizar o pandas, framework amplamente utilizado pra lidar com dados\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
         "\n",
         "#carrega a base de dados e retorna conjuntos de treinamento e teste\n",
         "def load_data():\n",
@@ -361,7 +418,157 @@
         "\n"
       ],
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "predicted:  1\n",
+            "label:  1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UvgUpr_ebei8"
+      },
+      "source": [
+        "def testing(model, my_inputs, my_labels):\n",
+        "  errors = list()\n",
+        "  for input, label in zip(my_inputs, my_labels):\n",
+        "    output = model.predict(input)\n",
+        "    if(output != label):\n",
+        "      errors.append((output, label))\n",
+        "  error_rate = len(errors) / len(my_labels)\n",
+        "  hit_rate = 1 - error_rate\n",
+        "  print('Total de entradas: {}\\nTotal de Erros: {}\\nTaxa de erro: {}\\nTaxa de Acerto: {}'.format(len(my_labels), len(errors), error_rate, hit_rate))\n",
+        "\n",
+        "  #return errors, my_labels"
+      ],
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J5bcSS6nd9A8",
+        "outputId": "393cad46-665c-4a62-e15f-4db8e96aa53b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        }
+      },
+      "source": [
+        "taxas_aprendizado = [0.01, 0.1, 0.01, 0.1]\n",
+        "limiares = [0.2, 0.2, 0.5, 0.5]\n",
+        "\n",
+        "for taxa_aprendizado, limiar in zip(taxas_aprendizado, limiares):\n",
+        "  print('#################')\n",
+        "  print('Treinando Perceptron com Taxa de Aprendizado: {} e Limiar: {}'.format(taxa_aprendizado, limiar))\n",
+        "  perceptron = Perceptron(8, learning_rate=taxa_aprendizado, threshold=limiar)\n",
+        "  perceptron.train(training_inputs.values, training_labels.values)\n",
+        "  testing(perceptron, test_inputs.values, test_labels.values)\n",
+        "  print()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#################\n",
+            "Treinando Perceptron com Taxa de Aprendizado: 0.01 e Limiar: 0.2\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 39\n",
+            "Taxa de erro: 0.2532467532467532\n",
+            "Taxa de Acerto: 0.7467532467532467\n",
+            "\n",
+            "#################\n",
+            "Treinando Perceptron com Taxa de Aprendizado: 0.1 e Limiar: 0.2\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 42\n",
+            "Taxa de erro: 0.2727272727272727\n",
+            "Taxa de Acerto: 0.7272727272727273\n",
+            "\n",
+            "#################\n",
+            "Treinando Perceptron com Taxa de Aprendizado: 0.01 e Limiar: 0.5\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 36\n",
+            "Taxa de erro: 0.23376623376623376\n",
+            "Taxa de Acerto: 0.7662337662337663\n",
+            "\n",
+            "#################\n",
+            "Treinando Perceptron com Taxa de Aprendizado: 0.1 e Limiar: 0.5\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 39\n",
+            "Taxa de erro: 0.2532467532467532\n",
+            "Taxa de Acerto: 0.7467532467532467\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H1O0mouQiszS",
+        "outputId": "3ccdafe4-d91e-4ee1-bd86-0daaaf235678",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        }
+      },
+      "source": [
+        "taxas_aprendizado = [0.01, 0.1, 0.01, 0.1]\n",
+        "limiares = [0.2, 0.2, 0.5, 0.5]\n",
+        "\n",
+        "for taxa_aprendizado, limiar in zip(taxas_aprendizado, limiares):\n",
+        "  print('#################')\n",
+        "  print('Treinando Adaline com Taxa de Aprendizado: {} e Limiar: {}'.format(taxa_aprendizado, limiar))\n",
+        "  adaline = Perceptron_to_Adaline(8, learning_rate=taxa_aprendizado, threshold=limiar)\n",
+        "  adaline.train(training_inputs.values, training_labels.values)\n",
+        "  testing(adaline, test_inputs.values, test_labels.values)\n",
+        "  print()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#################\n",
+            "Treinando Adaline com Taxa de Aprendizado: 0.01 e Limiar: 0.2\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 87\n",
+            "Taxa de erro: 0.564935064935065\n",
+            "Taxa de Acerto: 0.43506493506493504\n",
+            "\n",
+            "#################\n",
+            "Treinando Adaline com Taxa de Aprendizado: 0.1 e Limiar: 0.2\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 90\n",
+            "Taxa de erro: 0.5844155844155844\n",
+            "Taxa de Acerto: 0.4155844155844156\n",
+            "\n",
+            "#################\n",
+            "Treinando Adaline com Taxa de Aprendizado: 0.01 e Limiar: 0.5\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 44\n",
+            "Taxa de erro: 0.2857142857142857\n",
+            "Taxa de Acerto: 0.7142857142857143\n",
+            "\n",
+            "#################\n",
+            "Treinando Adaline com Taxa de Aprendizado: 0.1 e Limiar: 0.5\n",
+            "Total de entradas: 154\n",
+            "Total de Erros: 44\n",
+            "Taxa de erro: 0.2857142857142857\n",
+            "Taxa de Acerto: 0.7142857142857143\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
