--- a/MLP/Backpropagation.ipynb
+++ b/MLP/Backpropagation.ipynb
@@ -28,13 +28,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gquVOlEzAIeg"
+        "id": "gquVOlEzAIeg",
+        "outputId": "b14e70e4-c0b5-4432-b93b-8b391c30de60",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        }
       },
       "source": [
-        "!git clone https://github.com/valmirf/redes_neurais_esp.git"
+        "!git clone https://github.com/valmirf/redes_neurais_ple.git"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'redes_neurais_ple'...\n",
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Total 216 (delta 6), reused 0 (delta 0), pack-reused 205\u001b[K\n",
+            "Receiving objects: 100% (216/216), 17.17 MiB | 40.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (91/91), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,7 +80,7 @@
         "import random\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -210,7 +229,7 @@
         "def sigmoid_prime(z):\n",
         "    return sigmoid(z)*(1-sigmoid(z))\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -236,7 +255,7 @@
         "import numpy as np\n",
         "\n",
         "def load_data():\n",
-        "    f = gzip.open('redes_neurais_esp/MLP/mnist.pkl.gz', 'rb')\n",
+        "    f = gzip.open('redes_neurais_ple/MLP/mnist.pkl.gz', 'rb')\n",
         "    training_data, validation_data, test_data = pickle.load(f, encoding=\"latin1\")\n",
         "    f.close()\n",
         "    return (training_data, validation_data, test_data)\n",
@@ -257,7 +276,7 @@
         "    e[j] = 1.0\n",
         "    return e\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -279,7 +298,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7c86ya6KrquI"
+        "id": "7c86ya6KrquI",
+        "outputId": "15457604-3ad0-4e93-ff11-d520f87fc552",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
       },
       "source": [
         "training_data, validation_data, test_data = load_data_wrapper()\n",
@@ -293,7 +317,17 @@
         "\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 0 : 1633 / 10000 = 16.33%\n",
+            "Epoch 1 : 2098 / 10000 = 20.98%\n",
+            "Epoch 2 : 3466 / 10000 = 34.66%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
