--- a/MLP/Backpropagation.ipynb
+++ b/MLP/Backpropagation.ipynb
@@ -29,27 +29,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "gquVOlEzAIeg",
-        "outputId": "b14e70e4-c0b5-4432-b93b-8b391c30de60",
+        "outputId": "acf90430-4799-4f47-e422-3a5314a49d8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 139
+          "height": 129
         }
       },
       "source": [
-        "!git clone https://github.com/valmirf/redes_neurais_ple.git"
+        "!git clone https://github.com/valmirf/redes_neurais_esp.git"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'redes_neurais_ple'...\n",
-            "remote: Enumerating objects: 11, done.\u001b[K\n",
-            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Total 216 (delta 6), reused 0 (delta 0), pack-reused 205\u001b[K\n",
-            "Receiving objects: 100% (216/216), 17.17 MiB | 40.71 MiB/s, done.\n",
-            "Resolving deltas: 100% (91/91), done.\n"
+            "Cloning into 'redes_neurais_esp'...\n",
+            "remote: Enumerating objects: 52, done.\u001b[K\n",
+            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (49/49), done.\u001b[K\n",
+            "remote: Total 52 (delta 10), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (52/52), done.\n"
           ],
           "name": "stdout"
         }
@@ -80,7 +79,7 @@
         "import random\n",
         "import numpy as np"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -229,7 +228,7 @@
         "def sigmoid_prime(z):\n",
         "    return sigmoid(z)*(1-sigmoid(z))\n"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -255,7 +254,7 @@
         "import numpy as np\n",
         "\n",
         "def load_data():\n",
-        "    f = gzip.open('redes_neurais_ple/MLP/mnist.pkl.gz', 'rb')\n",
+        "    f = gzip.open('redes_neurais_esp/MLP/mnist.pkl.gz', 'rb')\n",
         "    training_data, validation_data, test_data = pickle.load(f, encoding=\"latin1\")\n",
         "    f.close()\n",
         "    return (training_data, validation_data, test_data)\n",
@@ -276,7 +275,7 @@
         "    e[j] = 1.0\n",
         "    return e\n"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -299,10 +298,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7c86ya6KrquI",
-        "outputId": "15457604-3ad0-4e93-ff11-d520f87fc552",
+        "outputId": "a1c20c72-b6ae-44d9-95e7-c6ff12cee507",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 578
         }
       },
       "source": [
@@ -312,18 +311,43 @@
         "#arquitetura da rede\n",
         "arquitecture = [784, 30, 10]\n",
         "mlp = Network(arquitecture)\n",
-        "mlp.SGD(training_data, 30, 32, 0.3, test_data=test_data)\n",
-        "\n",
-        "\n"
+        "mlp.SGD(training_data, 30, 32, 0.3, test_data=test_data)\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 0 : 1633 / 10000 = 16.33%\n",
-            "Epoch 1 : 2098 / 10000 = 20.98%\n",
-            "Epoch 2 : 3466 / 10000 = 34.66%\n"
+            "Epoch 0 : 4174 / 10000 = 41.74%\n",
+            "Epoch 1 : 5933 / 10000 = 59.33%\n",
+            "Epoch 2 : 6495 / 10000 = 64.95%\n",
+            "Epoch 3 : 6849 / 10000 = 68.49%\n",
+            "Epoch 4 : 7043 / 10000 = 70.43%\n",
+            "Epoch 5 : 7143 / 10000 = 71.43%\n",
+            "Epoch 6 : 7219 / 10000 = 72.19%\n",
+            "Epoch 7 : 7325 / 10000 = 73.25%\n",
+            "Epoch 8 : 7342 / 10000 = 73.42%\n",
+            "Epoch 9 : 7359 / 10000 = 73.59%\n",
+            "Epoch 10 : 7375 / 10000 = 73.75%\n",
+            "Epoch 11 : 7396 / 10000 = 73.96%\n",
+            "Epoch 12 : 7416 / 10000 = 74.16%\n",
+            "Epoch 13 : 7411 / 10000 = 74.11%\n",
+            "Epoch 14 : 7442 / 10000 = 74.42%\n",
+            "Epoch 15 : 7450 / 10000 = 74.5%\n",
+            "Epoch 16 : 7473 / 10000 = 74.73%\n",
+            "Epoch 17 : 7464 / 10000 = 74.64%\n",
+            "Epoch 18 : 7476 / 10000 = 74.76%\n",
+            "Epoch 19 : 7463 / 10000 = 74.63%\n",
+            "Epoch 20 : 7462 / 10000 = 74.62%\n",
+            "Epoch 21 : 7488 / 10000 = 74.88%\n",
+            "Epoch 22 : 7486 / 10000 = 74.86%\n",
+            "Epoch 23 : 7508 / 10000 = 75.08%\n",
+            "Epoch 24 : 7516 / 10000 = 75.16%\n",
+            "Epoch 25 : 7499 / 10000 = 74.99%\n",
+            "Epoch 26 : 7517 / 10000 = 75.17%\n",
+            "Epoch 27 : 7514 / 10000 = 75.14%\n",
+            "Epoch 28 : 7507 / 10000 = 75.07%\n",
+            "Epoch 29 : 7513 / 10000 = 75.13%\n"
           ],
           "name": "stdout"
         }
