--- a/Perceptron/Perceptron.ipynb
+++ b/Perceptron/Perceptron.ipynb
@@ -28,21 +28,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "2Yyyz9kf3US8",
-        "outputId": "f87be1aa-6ba7-4bca-8334-60e6e504fa32",
+        "outputId": "a27e0194-f47f-46c1-f54a-9d1a6f54f2cb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!git clone https://github.com/valmirf/redes_neurais_ple.git"
+        "!git clone https://github.com/valmirf/redes_neurais_esp.git"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'redes_neurais_ple' already exists and is not an empty directory.\n"
+            "fatal: destination path 'redes_neurais_esp' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -117,7 +116,7 @@
         "                #w_(i+1) = w_i + delta \n",
         "                self.weights += delta\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -136,10 +135,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "O9zGKKaqf6I5",
-        "outputId": "2495278b-21fa-46e0-cba6-c6395b546a95",
+        "outputId": "2d856540-99ff-4536-9f7f-7e0a45b59c1b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -166,7 +164,7 @@
         "\n",
         "weights_and_1 = perceptron.weights"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,10 +197,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "b_Tj6MWWkL73",
-        "outputId": "87bc82c7-fa80-47e5-94aa-8ae016a7f8f6",
+        "outputId": "02e84b25-c76e-4b4c-c94e-70fea6ba85b2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -229,7 +226,7 @@
         "\n",
         "weights_and_2 = perceptron.weights"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,10 +253,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "xaCPZN-NmH5z",
-        "outputId": "21441db0-b0c3-4056-a1c3-c9958090b82e",
+        "outputId": "a8cee21c-a694-4668-c7d0-2d26cddc6fe1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 153
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -292,7 +288,7 @@
         "print(\"Pesos do segundo AND Perceptron:\", weights_and_2)\n",
         "print(\"Pesos do XOR Perceptron:\", weights_xor)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +353,7 @@
         "                #w_(i+1) = w_i + delta \n",
         "                self.weights += delta\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -377,10 +373,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pq9HZFUYkc5D",
-        "outputId": "81937b91-2897-49ed-9764-bd8fc8ae089e",
+        "outputId": "65ef9942-b8e0-4c2d-fe14-6dcde46de265",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -390,7 +385,7 @@
         "\n",
         "#carrega a base de dados e retorna conjuntos de treinamento e teste\n",
         "def load_data():\n",
-        "    url = 'redes_neurais_ple/Perceptron/diabetes.csv'\n",
+        "    url = 'redes_neurais_esp/Perceptron/diabetes.csv'\n",
         "    df = pd.read_csv(url)\n",
         "    #remove a ultima coluna (dados)\n",
         "    data = df[df.columns[:-1]]\n",
@@ -417,7 +412,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,17 +442,16 @@
         "\n",
         "  #return errors, my_labels"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "J5bcSS6nd9A8",
-        "outputId": "393cad46-665c-4a62-e15f-4db8e96aa53b",
+        "outputId": "15b9f915-12f9-41f6-a17e-6e6221e35419",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 493
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -472,7 +466,7 @@
         "  testing(perceptron, test_inputs.values, test_labels.values)\n",
         "  print()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,10 +508,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "H1O0mouQiszS",
-        "outputId": "3ccdafe4-d91e-4ee1-bd86-0daaaf235678",
+        "outputId": "344abd13-a8f6-4a31-eec3-472f046c608c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 493
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -532,7 +525,7 @@
         "  testing(adaline, test_inputs.values, test_labels.values)\n",
         "  print()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
