--- a/PyTorch/Semantic_Segmentation.ipynb
+++ b/PyTorch/Semantic_Segmentation.ipynb
@@ -694,11 +694,9 @@
         "\n",
         "Critétio de Dice:\n",
         "\n",
-        "$DICE= 1- 2 \\frac{\\sum_{i=1}^M \\hat{y_i}*y_i + \\epsilon}{\\sum_{i=M}^M \\hat{y_i}+y_i + \\epsilon}$\n",
+        "$DICE= 1- 2 \\frac{\\sum_{i=1}^M (\\hat{y_i}*y_i) + \\epsilon}{\\sum_{i=M}^M (\\hat{y_i}+y_i) + \\epsilon}$\n",
         "\n",
-        "onde $\\hat{y_i}$ é a previsão de pixels da rede neural da imagem $i$ e $y_i$ é o valor da máscara da imagem $i$ e $M$ é quantidade de imagens.\n",
-        "\n",
-        "O critério de entropia cruzada é mostrado na equação abaixo:\n",
+        "onde $\\hat{y_i}$ é a previsão de pixels da rede neural da imagem $i$ e $y_i$ é o valor da máscara da imagem $i$ e $M$ é quantidade de imagens. O termo $\\epsilon$ é usado para garantir a estabilidade da função de perda, evitando o questão numérica de divisão por 0. O critério de entropia cruzada é mostrado na equação abaixo:\n",
         "\n",
         "$BCE=\\frac{1}{M} \\sum_{j=1}^{M} y_j \\ln \\hat{y_j} + (1-y_j) \\ln(1-\\hat{y_j})$\n",
         "\n",
@@ -706,7 +704,19 @@
         "\n",
         "$BCE\\_DICE= \\lambda*BCE + (1 - \\lambda)*DICE$ \n",
         "\n",
+        "\\\n",
         "##Métrica IOU\n",
+        "Indicadores IoU, ou índice Jaccard é semelhante ao índice de Dice. É equivalente a calcular a área de interseção entre a previsão da rede neural e a máscara e a área de união entre a previsão da rede neural como mostra a figura abaixo. \n",
+        "![](https://github.com/valmirf/redes_neurais_esp/blob/main/PyTorch/FIG/iou_equation.png?raw=true)\n",
+        "\n",
+        "Este índice varia entre 0 e 1. Em que 0 indica que não houve acerto da previsão do algoritmo e 1 indica que o algoritmo acertou exatamente a área do objeto de interesse.\n",
+        "\n",
+        "![](https://github.com/valmirf/redes_neurais_esp/blob/main/PyTorch/FIG/IOU.png?raw=true)\n",
+        "\n",
+        "\n",
+        "E equação IOU é descrita a seguir:\n",
+        "\n",
+        "$IOU= \\frac{\\sum_{i=1}^M (\\hat{y_i}*y_i) + \\epsilon}{\\left( \\sum_{i=M}^M (\\hat{y_i}+y_i) - \\sum_{i=1}^M (\\hat{y_i}*y_i)\\right)+ \\epsilon}$ \n",
         "\n"
       ]
     },
@@ -747,7 +757,7 @@
         "    return iou\n",
         "\n",
         "\n",
-        "\n",
+        "#Calcula a média do UOU de um grupo de imagens\n",
         "def iou_batch(y_pred,y):\n",
         "    '''computes mean iou for a batch of ground truth masks and predicted masks'''\n",
         "    ious = []\n",
