--- a/PyTorch/Convolutional_Sentiment_Analysis.ipynb
+++ b/PyTorch/Convolutional_Sentiment_Analysis.ipynb
@@ -98,7 +98,7 @@
         "TEXT = data.Field(tokenize = 'spacy', batch_first = True)\n",
         "LABEL = data.LabelField(dtype = torch.float)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,39 +141,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HtV6zZhdhMwV",
-        "outputId": "1b83777f-b17e-4c92-89e3-7c57fd882d6f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HtV6zZhdhMwV"
       },
       "source": [
         "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "aclImdb_v1.tar.gz:   0%|          | 98.3k/84.1M [00:00<01:27, 956kB/s]"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "downloading aclImdb_v1.tar.gz\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "aclImdb_v1.tar.gz: 100%|██████████| 84.1M/84.1M [00:01<00:00, 58.3MB/s]\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -187,29 +161,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0ytF6PpxhMwf",
-        "outputId": "8464e8ca-5b40-401c-e659-549561c88c0c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "0ytF6PpxhMwf"
       },
       "source": [
         "print(f'Number of training examples: {len(train_data)}')\n",
         "print(f'Number of testing examples: {len(test_data)}')\n",
         "print(vars(train_data.examples[0]))"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Number of training examples: 25000\n",
-            "Number of testing examples: 25000\n",
-            "{'text': ['Upon', 'the', 'first', 'viewing', ',', 'I', 'found', 'this', 'tale', 'to', 'be', 'at', 'least', 'less', 'annoying', 'than', 'other', 'Cannon', 'Movie', 'Tales', '.', 'After', 'many', 'more', ',', 'I', 'think', 'it', \"'s\", 'one', 'of', 'the', 'best', '.', 'Some', 'of', 'the', 'songs', 'are', 'pretty', 'bad', ',', 'especially', 'the', 'love', 'song', ',', 'but', 'two', 'things', 'stand', 'out', 'that', 'make', 'the', 'movie', ',', 'even', 'the', 'singing', ',', 'worthwhile', '.', 'One', 'is', 'the', 'art', 'direction', '.', 'Like', 'the', 'other', 'Cannon', 'Movie', 'Tales', ',', 'this', 'is', 'a', 'beautifully', 'decorated', 'period', 'piece', ';', 'every', 'piece', 'of', 'cloth', 'and', 'jewel', '(', 'both', 'of', 'which', 'have', 'major', 'parts', 'in', 'this', 'movie', \"'s\", 'plot', ')', 'look', 'fresh', 'and', 'new', ',', 'and', 'contrast', 'with', 'the', 'plain', 'clothes', 'of', 'the', 'peasants', '.', 'Even', 'during', 'the', 'love', 'song', 'I', 'find', 'myself', 'studying', 'the', 'dress', 'and', 'hair', 'of', 'the', 'princess', ',', 'wonderfully', 'done', '.', 'The', 'other', 'thing', 'is', 'the', 'comic', 'timing', '.', 'A', 'lot', 'of', 'the', 'movie', 'is', 'cheesy', ',', 'but', 'the', 'emperor', \"'s\", 'vanity', '(', 'and', 'his', 'making', 'fun', 'of', 'himself', 'in', 'the', 'end', ')', ',', 'the', 'suspicious', 'guard', ',', 'the', 'guard', 'chasing', 'Nicholas', ',', 'and', 'the', 'stupid', 'prince', ',', 'were', 'all', 'quite', 'funny', 'and', 'seem', 'to', 'be', 'ridiculous', 'quite', 'on', 'purpose', '.', 'And', 'the', 'sequence', 'during', 'the', 'song', 'Weave', '-', 'O', 'makes', 'up', 'for', 'the', 'songs', 'that', 'were', \"n't\", 'so', 'good', '.'], 'label': 'pos'}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -233,7 +193,7 @@
         "#train_data, valid_data = train_data.split(random_state = random.seed(SEED))\n",
         "valid_data, test_data = test_data.split(split_ratio=0.5, random_state = random.seed(SEED))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -248,29 +208,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PsT8nzpuXAKg",
-        "outputId": "83239122-de79-4490-dd28-591b8edb21de",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "PsT8nzpuXAKg"
       },
       "source": [
         "print(f'Number of training examples: {len(train_data)}')\n",
         "print(f'Number of validation examples: {len(valid_data)}')\n",
         "print(f'Number of testing examples: {len(test_data)}')"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Number of training examples: 25000\n",
-            "Number of validation examples: 12500\n",
-            "Number of testing examples: 12500\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -332,11 +278,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UyFPGtlQX6xB",
-        "outputId": "9a3f41fe-42c6-4c2e-fec6-6086253eea72",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "UyFPGtlQX6xB"
       },
       "source": [
         "MAX_VOCAB_SIZE = 25_000\n",
@@ -348,17 +290,8 @@
         "\n",
         "LABEL.build_vocab(train_data)"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            ".vector_cache/glove.6B.zip: 862MB [06:33, 2.19MB/s]                           \n",
-            "100%|█████████▉| 398123/400000 [00:17<00:00, 23459.92it/s]"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -412,15 +345,15 @@
         "\n",
         "\n",
         "### Implementação\n",
-        "As camadas convolucionais são implementadas com `nn.Conv2d`. O argumento `in_channels` é o número de \"canais\" de entrada da camada convolucional. O `out_channels` é o número de filtros e o `kernel_size` é o tamanho dos filtros. Cada um dos `kernel_size`s será $[n \\times emb\\_dim]$ onde $n$ é o tamanho dos n-gramas e emb_dim é a dimensão dos embeddings.\n",
+        "As camadas convolucionais são implementadas com `nn.Conv2d`. O argumento `in_channels` é o número de \"canais\" de entrada da camada convolucional. O `out_channels` é o número de filtros e o `kernel_size` é o tamanho dos filtros. Cada um dos `kernel_size`s terá dimensão $[n \\times emb\\_dim]$ onde $n$ é o tamanho dos n-gramas e $emb_{dim}$ é a dimensão dos embeddings.\n",
         "\n",
-        "A segunda dimensão da entrada em uma camada `nn.Conv2d` deve ser a dimensão do canal. O tamanho da saída da camada convolucional depende do tamanho da entrada para ela, e diferentes lotes contêm sentenças de diferentes comprimentos. Sem a camada de _max-pooling_, a entrada para nossa camada linear dependeria do tamanho da frase de entrada (não o que queremos). Uma opção para retificar isso seria cortar/preencher todas as sentenças com o mesmo comprimento; no entanto, com a camada de _max-pooling_, sempre sabemos que a entrada para a camada linear será o número total de filtros. \n",
+        "A segunda dimensão da entrada em uma camada `nn.Conv2d` deve ser a dimensão do canal. O tamanho da saída da camada convolucional depende do tamanho da entrada, e diferentes lotes contêm sentenças de diferentes comprimentos. Sem a camada de _max-pooling_, a entrada para nossa camada linear dependeria do tamanho da frase de entrada (não o que queremos). Uma opção para retificar isso seria cortar/preencher todas as sentenças com o mesmo comprimento; no entanto, com a camada de _max-pooling_, sempre sabemos que a entrada para a camada linear será o número total de filtros. \n",
         "\n",
         "**Nota**: há uma exceção se a frase forem mais curta do que o maior filtro usado. Pois, a frase terá que ser preenchida com o comprimento do maior filtro. Nos dados do IMDb não há comentários de apenas 5 palavras, então não precisamos nos preocupar com isso.\n",
         "\n",
-        "Neste modelo o token <pad> será ignorado. Isso ocorre porque queremos dizer explicitamente ao nosso modelo que os tokens de preenchimento <pad> são irrelevantes para determinar o sentimento de uma frase. Fazemos isso passando o índice do nosso token de pad como o argumento padding_idx para a camada nn.Embedding.\n",
+        "Neste modelo o token <pad> será ignorado. Isso ocorre porque queremos dizer explicitamente ao nosso modelo que os tokens de preenchimento <pad> são irrelevantes para determinar o sentimento de uma frase. Fazemos isso passando o índice do nosso token de pad como o argumento `padding_idx` para a camada `nn.Embedding`.\n",
         "\n",
-        "Pra utilizar uma lista de filtros, utiliza-se `nn.ModuleList`, uma função usada para manter uma lista de PyTorch `nn.Module`s. Agora podemos passar uma lista de tamanhos de filtro arbitrários e a será criado uma camada convolucional para cada um deles. Então, no método `forward`, iteramos através da lista aplicando cada camada convolucional para obter uma lista de saídas convolucionais, que também é alimentada por meio do pooling máximo em uma lista antes de concatenar e passar pelas camadas dropout e linear."
+        "Pra utilizar uma lista de filtros, utiliza-se `nn.ModuleList`, uma função usada para manter uma lista de PyTorch `nn.Module`. Então, no método `forward`, iteramos através da lista aplicando cada camada convolucional para obter uma lista de saídas convolucionais, que também é alimentada por meio da _max-pooling_ em uma lista, antes de concatenar e passar pelas camadas _dropout_ e linear."
       ]
     },
     {
@@ -483,77 +416,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5esRfEoWhMwz"
-      },
-      "source": [
-        "Um modelo com camadas convolucionais unidimensionais, onde a dimensão de _embedding_ é a \"profundidade\" do filtro e o número de tokens na frase é a largura.\n",
-        "\n",
-        "Você poderá avaliar o resultado nesse modelo. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yPGndyyBhMwz"
-      },
-      "source": [
-        "class CNN1d(nn.Module):\n",
-        "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, \n",
-        "                 dropout, pad_idx):\n",
-        "        \n",
-        "        super().__init__()\n",
-        "        \n",
-        "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
-        "        \n",
-        "        self.convs = nn.ModuleList([\n",
-        "                                    nn.Conv1d(in_channels = embedding_dim, \n",
-        "                                              out_channels = n_filters, \n",
-        "                                              kernel_size = fs)\n",
-        "                                    for fs in filter_sizes\n",
-        "                                    ])\n",
-        "        \n",
-        "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
-        "        \n",
-        "        self.dropout = nn.Dropout(dropout)\n",
-        "        \n",
-        "    def forward(self, text):\n",
-        "        \n",
-        "        #text = [batch size, sent len]\n",
-        "        \n",
-        "        embedded = self.embedding(text)\n",
-        "                \n",
-        "        #embedded = [batch size, sent len, emb dim]\n",
-        "        \n",
-        "        embedded = embedded.permute(0, 2, 1)\n",
-        "        \n",
-        "        #embedded = [batch size, emb dim, sent len]\n",
-        "        \n",
-        "        conved = [F.relu(conv(embedded)) for conv in self.convs]\n",
-        "            \n",
-        "        #conved_n = [batch size, n_filters, sent len - filter_sizes[n] + 1]\n",
-        "        \n",
-        "        pooled = [F.max_pool1d(conv, conv.shape[2]).squeeze(2) for conv in conved]\n",
-        "        \n",
-        "        #pooled_n = [batch size, n_filters]\n",
-        "        \n",
-        "        cat = self.dropout(torch.cat(pooled, dim = 1))\n",
-        "        \n",
-        "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
-        "            \n",
-        "        return self.fc(cat)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "22N8MLvEhMw4"
       },
       "source": [
-        "Criamos uma instância da `CNN`.\n",
-        "\n",
-        "Podemos alterar `CNN` para` CNN1d` para executar o modelo convolucional unidimensional, observando que ambos os modelos fornecem resultados quase idênticos."
+        "###Parâmetros"
       ]
     },
     {
@@ -581,18 +447,14 @@
         "id": "A-6AjBrOhMw-"
       },
       "source": [
-        "Verificando o número de parâmetros em nosso modelo, ambos os modelos `CNN` e` CNN1d` têm exatamente o mesmo número de parâmetros.\n",
+        "Método para verificar o número de parâmetros do nosso modelo\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KcFGNbsehMw-",
-        "outputId": "8c4949d0-225c-4dd2-a237-84f982b448f0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "KcFGNbsehMw-"
       },
       "source": [
         "def count_parameters(model):\n",
@@ -601,15 +463,7 @@
         "print(f'The model has {count_parameters(model):,} trainable parameters')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The model has 2,620,801 trainable parameters\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -623,11 +477,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pMLSZfGahMxF",
-        "outputId": "d2736ddb-5bef-44a2-8d31-9eaa25324f04",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "pMLSZfGahMxF"
       },
       "source": [
         "pretrained_embeddings = TEXT.vocab.vectors\n",
@@ -635,26 +485,7 @@
         "model.embedding.weight.data.copy_(pretrained_embeddings)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
-              "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
-              "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
-              "        ...,\n",
-              "        [ 0.0454, -0.8261, -0.3763,  ...,  0.6316,  0.8460,  0.9344],\n",
-              "        [ 0.1268,  0.3074,  0.2969,  ..., -0.3262, -0.5281,  0.3048],\n",
-              "        [ 0.3076, -0.2846, -0.3365,  ..., -1.4547,  0.7665,  0.6076]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -867,11 +698,7 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "09FrvX35hMxv",
-        "outputId": "5b49ec7f-6a04-449d-effa-3bf1e173a3a3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "09FrvX35hMxv"
       },
       "source": [
         "N_EPOCHS = 5\n",
@@ -898,30 +725,7 @@
         "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\r100%|█████████▉| 399259/400000 [00:30<00:00, 23729.50it/s]"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch: 01 | Epoch Time: 0m 20s\n",
-            "\tTrain Loss: 0.659 | Train Acc: 60.46%\n",
-            "\t Val. Loss: 0.509 |  Val. Acc: 78.31%\n",
-            "Epoch: 02 | Epoch Time: 0m 19s\n",
-            "\tTrain Loss: 0.432 | Train Acc: 80.15%\n",
-            "\t Val. Loss: 0.362 |  Val. Acc: 83.93%\n",
-            "Epoch: 03 | Epoch Time: 0m 20s\n",
-            "\tTrain Loss: 0.301 | Train Acc: 87.18%\n",
-            "\t Val. Loss: 0.333 |  Val. Acc: 85.15%\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
