--- a/RNN/RNN.ipynb
+++ b/RNN/RNN.ipynb
@@ -36,7 +36,7 @@
         "\n",
         "As redes neurais tradicionais de feed-forward recebem uma quantidade fixa de dados de entrada ao mesmo tempo e produzem uma quantidade fixa de saída a cada vez. Por outro lado, os RNNs não consomem todos os dados de entrada de uma vez. Em vez disso, eles os pegam um de cada vez e em sequência. Em cada etapa, o RNN faz uma série de cálculos antes de produzir uma saída. A saída, conhecida como estado oculto, é então combinada com a próxima entrada na sequência para produzir outra saída. Este processo continua até que o modelo seja programado para terminar ou a sequência de entrada termine.\n",
         "\n",
-        "![](https://raw.githubusercontent.com/valmirf/redes_neurais/master/PyTorch/FIG/rnn.gif?token=AFFPDEK6H5UKFZOLMD2S7WS7YBB7I)\n",
+        "![](https://raw.githubusercontent.com/valmirf/redes_neurais_esp/main/RNN/FIG/rnn.gif)\n",
         "\n",
         "\n",
         "Os cálculos em cada etapa de tempo consideram o contexto das etapas de tempo anteriores na forma do estado oculto. Ser capaz de usar essas informações contextuais de entradas anteriores é a essência do sucesso dos RNNs em problemas sequenciais.\n",
@@ -45,7 +45,7 @@
         "\n",
         "É possível controlar quando a RNN vai gerar uma saída. Podemos gerar uma saída a cada apresentação de entrada, ou gerar uma saída apenas após apresentar uma entrada completa ou do modo que quisermos. Na Figura abaixo, pode-se ver uma RNN com todas as entradas e saídas. Se quisermos uma saída apenas no final, é só ignorar as entradas inermediárias e gerar apenas a saída final (_Output X_). Como esta saída final já passou por cálculos em todas as células anteriores, o contexto de todas as entradas anteriores foi capturado. Isso significa que o resultado final é realmente dependente de todos os cálculos e entradas anteriores.\n",
         "\n",
-        "![](https://raw.githubusercontent.com/valmirf/redes_neurais/master/PyTorch/FIG/rnn2.jpg?token=AFFPDEOMVP2ISECTDYTW7RS7YBCC2)\n",
+        "![](https://raw.githubusercontent.com/valmirf/redes_neurais_esp/main/RNN/FIG/rnn2.jpg)\n",
         "\n",
         "##Camadas Intermediárias\n",
         "Para o caso em que você só precisa de uma única saída de todo o processo, obter essa saída pode ser bastante simples, pois você pode facilmente pegar a saída produzida pela última célula RNN na sequência. Como esta saída final já passou por cálculos em todas as células anteriores, o contexto de todas as entradas anteriores foi capturado. Isso significa que o resultado final é realmente dependente de todos os cálculos e entradas anteriores.\n",
@@ -63,7 +63,7 @@
         "\n",
         "O estado oculto que acabamos de produzir será então realimentado na célula RNN junto com a próxima entrada e este processo continua até que fiquemos sem entrada ou o modelo seja programado para parar de produzir saídas.\n",
         "\n",
-        "##Training and Back-propagation\n",
+        "##Treinamento com Back-propagation\n",
         "Semelhante a outras formas de redes neurais, os modelos RNN precisam ser treinados para produzir saídas precisas e desejadas após a passagem de um conjunto de entradas.\n",
         "\n",
         "Durante o treinamento, para cada dado de treinamento, teremos um rótulo de verdade do terreno correspondente ou simplesmente colocaremos uma \"resposta correta\" que queremos que o modelo produza. Claro, nas primeiras vezes que passamos os dados de entrada pelo modelo, não obteremos saídas iguais a essas respostas corretas. No entanto, depois de receber esses resultados, o que faremos durante o treinamento é calcular a perda desse processo, que mede o quão longe o resultado do modelo está da resposta correta. Usando essa perda, podemos calcular o gradiente da função de perda para retropropagação.\n",
@@ -116,7 +116,7 @@
       "source": [
         "Primeiro, definiremos as sentenças que queremos que nosso modelo produza quando alimentado com a primeira palavra ou os primeiros caracteres.\n",
         "\n",
-        "Então, vamos criar um dicionário de todos os caracteres que temos nas frases e mapeá-los para um número inteiro. Isso nos permitirá converter nossos caracteres de entrada em seus respectivos inteiros (char2int) e vice-versa (int2char)."
+        "Então, vamos criar um dicionário de todos os caracteres que temos nas frases e mapeá-los para um número inteiro. Isso nos permitirá converter nossos caracteres de entrada em seus respectivos inteiros (`char2int`) e vice-versa (`int2char`)."
       ]
     },
     {
@@ -279,11 +279,11 @@
       "source": [
         "Antes de codificar nossa sequência de entrada em vetores one-hot, definiremos 3 variáveis ​​principais:\n",
         "\n",
-        "* dict_size: o número de caracteres únicos que temos em nosso texto. Isso determinará o tamanho de um vetor quente, pois cada caractere terá um índice atribuído nesse vetor\n",
+        "* `dict_size`: o número de caracteres únicos que temos em nosso texto. Isso determinará o tamanho de um vetor quente, pois cada caractere terá um índice atribuído nesse vetor\n",
         "\n",
-        "* seq_len: o comprimento das sequências que estamos alimentando no modelo. Como padronizamos o comprimento de todas as nossas frases para serem iguais às frases mais longas, este valor será o comprimento máximo - 1, pois removemos a entrada do último caractere também\n",
+        "* `seq_len`: o comprimento das sequências que estamos alimentando no modelo. Como padronizamos o comprimento de todas as nossas frases para serem iguais às frases mais longas, este valor será o comprimento máximo - 1, pois removemos a entrada do último caractere também\n",
         "\n",
-        "* batch_size: o número de sentenças que definimos e que alimentaremos no modelo como um lote\n"
+        "* `batch_size`: o número de sentenças que definimos e que alimentaremos no modelo como um lote\n"
       ]
     },
     {
@@ -333,11 +333,11 @@
         "id": "BJ5KH9e0tnzZ"
       },
       "source": [
-        "Para começar a construir nosso próprio modelo de rede neural, podemos definir uma classe que herda a classe base de PyTorch (nn.module) para todos os módulos de rede neural. Depois de fazer isso, podemos começar a definir algumas variáveis ​​e também as camadas para o nosso modelo sob o construtor. Para este modelo, usaremos apenas 1 camada de RNN seguida por uma camada totalmente conectada. A camada totalmente conectada será responsável por converter a saída RNN em nossa forma de saída desejada.\n",
+        "Para começar a construir nosso próprio modelo de rede neural, podemos definir uma classe que herda a classe base de PyTorch (`nn.module`) para todos os módulos de rede neural. Depois de fazer isso, podemos começar a definir algumas variáveis ​​e também as camadas para o nosso modelo sob o construtor. Para este modelo, usaremos apenas 1 camada de RNN seguida por uma camada totalmente conectada. A camada totalmente conectada será responsável por converter a saída RNN em nossa forma de saída desejada.\n",
         "\n",
-        "Também teremos que definir a função forward pass em forward () como um método de classe. A ordem em que a função direta é executada sequencialmente, portanto, teremos que passar as entradas e o estado oculto inicializado com zero através da camada RNN primeiro, antes de passar as saídas RNN para a camada totalmente conectada. Observe que estamos usando as camadas que definimos no construtor.\n",
+        "Também teremos que definir a função forward  em `forward()` como um método de classe. A ordem em que a função direta é executada sequencialmente, portanto, teremos que passar as entradas e o estado oculto inicializado com zero através da camada RNN primeiro, antes de passar as saídas RNN para a camada totalmente conectada. Observe que estamos usando as camadas que definimos no construtor.\n",
         "\n",
-        "O último método que temos que definir é o método que chamamos anteriormente para inicializar o estado oculto - init_hidden (). Isso basicamente cria um tensor de zeros na forma de nossos estados ocultos."
+        "O último método que temos que definir é o método que chamamos anteriormente para inicializar o estado oculto - `init_hidden()`. Isso basicamente cria um tensor de zeros na forma de nossos estados ocultos."
       ]
     },
     {
@@ -393,8 +393,8 @@
       "source": [
         "Depois de definir o modelo acima, teremos que instanciar o modelo com os parâmetros relevantes e definir nossos hiperparâmetros também. Os hiperparâmetros que definimos abaixo são:\n",
         "\n",
-        "* n_epochs: Number of Epochs -> Refere-se ao número de vezes que nosso modelo percorrerá todo o conjunto de dados de treinamento\n",
-        "* lr: Taxa de aprendizagem -> Isso afeta a taxa em que nosso modelo atualiza os pesos nas células cada vez que a retropropogação é feita\n",
+        "* `n_epochs`: Number of Epochs -> Refere-se ao número de vezes que nosso modelo percorrerá todo o conjunto de dados de treinamento\n",
+        "* `lr`: Taxa de aprendizagem -> Isso afeta a taxa em que nosso modelo atualiza os pesos nas células cada vez que a retropropogação é feita\n",
         "\n",
         "Uma taxa de aprendizagem menor significa que o modelo altera os valores do peso com uma magnitude menor\n",
         "Uma maior taxa de aprendizagem significa que os pesos são atualizados em uma extensão maior para cada etapa\n",
